Fix transform origin on letter scale
Before, the origin wasn't being applied. This meant that when the letter
zoomed, the right side of the arch would exit the screen after the left
side did, which created an unsatisfactory impression of asymmetry. The
delay between the left side of the arch exiting the screen and the right
was too small to be intentional, so it just looked bad.

--- a/app/src/home/intro-animation/intro-anim-keyframes.sass
+++ b/app/src/home/intro-animation/intro-anim-keyframes.sass
@@ -173,7 +173,6 @@ $corner-anim-distance: 25%
 @keyframes letter-scale
   from
     transform: translate(-50%, -52.5%)
-    transform-origin: 46.3% 51.5%
 
   25%
     transform: translate(-50%, -52.5%) scale(.9)
