--- a/app/src/home/intro-animation/intro-anim.sass
+++ b/app/src/home/intro-animation/intro-anim.sass
@@ -24,6 +24,8 @@
 
   pointer-events: none
 
+  transform-origin: 44.83% 50%
+
 
 .corners-anim-container
   animation-fill-mode: forwards
